Update project to new standards:   - Update to JDK 15   - Update to gradle 6.7 Add complete chess logic implementation:  - Add event module for easy firing and automatic event listener ditection  - Add all pieces and their moves implementation