@@ -1,11 +1,7 @@
 plugins {
   id 'java'
-}
-
-compileJava.options.encoding = 'UTF-8'
-
-tasks.withType(JavaCompile).all {
-  options.compilerArgs += ['--enable-preview']
+  id 'application'
+  id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 group 'de.qetz'
@@ -17,7 +13,20 @@ repositories {
 
 dependencies {
   compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-  compile group: 'com.google.inject', name: 'guice', version: '4.2.3'
+  compile group: 'com.google.inject', name: 'guice', version: '5.0.0-BETA-1'
 
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  compile group: 'io.github.classgraph', name: 'classgraph', version: '4.6.3'
+
+  testImplementation group: 'org.junit.jupiter',
+    name: 'junit-jupiter-api',
+    version: '5.6.0'
+  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+}
+
+test {
+  useJUnitPlatform()
+}
+
+application {
+  mainClass = 'de.qetz.chess.ChessBootstrap'
 }
